fixing the cart routes
