# controllers/prodController.js
@@ -5,7 +5,7 @@ if (process.env.NODE_ENV !== "production") {
 
 exports.createProduct = async (req, res, next) => {
   const product = new Product({
-    category: req.body.categoryId,
+    category: req.body.category,
     name: req.body.name,
     price: req.body.price,
     productImage: req.file.path,
