# routes/cartRoute.js
@@ -2,10 +2,11 @@ const router = require("express").Router();
 const cartControler = require("../controllers/cartController");
 const { verifyUser, verifyAdmin } = require("../verifyToken");
 
-router.post("/", cartControler.savecart);
+router.post("/", cartControler.createOrder);
 
-router.get("/show", cartControler.getcart);
+router.get("/:cartId", cartControler.getOrder);
 
+router.get("/show/:userId", cartControler.getAllOrders);
 // router.get("/cart", verifyUser, cartControler.cart);
 
 module.exports = router;
